# pluto-ai-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.py  connections.py  logger.py  main.py  pyproject.toml  utils.py
adapters/: __init__.py
adapters/auth/: auth.py  interface.py
adapters/db/: abstract_uow.py  repositories.py
adapters/nba_stats/: __init__.py  interface.py  nba_api.py
adapters/prizepicks/: __init__.py  prizepicks.py
adapters/scheduler/: __init__.py  abstract_scheduler.py  apscheduler.py
adapters/supabase/: supabase.py
adapters/vegas_odds/: __init__.py  interface.py  odds_api.py
agency/: __init__.py  agency.py  agency_types.py  agent.py  communication.py  exceptions.py  logger.py  session.py
agency/engines/: __init__.py  reasoning_engine.py
agency/retrievers/: __init__.py  retriever.py
agency/tools/: __init__.py  base_tool.py
agents/: __init__.py  analyze_agent.py  game_prediction_agent.py  player_prediction_agent.py  prediction_agent.py  rogue_agent.py  twitter_agent.py
agents/helpers/: __init__.py  personalities.py  prediction_helpers.py  team_helpers.py
ai_models/: Modelfile  ollama_conversations_refined.txt  train.py  training.py
alembic/: env.py
alembic/versions/: 71ea306f4a8f_initial_migration.py  79000ace831e_adjust_prediction_tables.py
clients/: __init__.py  client.py  sqlalchemy.py
linear_models/: pluto_points_encoder.pkl  pluto_points_model.pkl  pluto_points_scaler.pkl
models/: __init__.py  base.py  data_pipeline_models.py  player_analysis_models.py  prediction_context.py  prediction_models.py  season_stats_model.py  team_models.py
openai_sdk/: __init__.py  agent.py
retrievers/: __init__.py  personality.py  raptor.py
routers/: __init__.py  games.py  odds_router.py  players.py  prediction_router.py  teams.py  user.py
routers/dependecies/: __init__.py
routers/helpers/: helpers.py
schemas/: __init__.py  game_predictions.py  twitter.py
scripts/: __init__.py  create_dataset.py  create_team_dataset.py  linear_regression_model.py
services/: __init__.py  data_pipeline.py  eval_service.py  game_prediction.py  game_service.py  odds_service.py  player_prediction.py  player_service.py  prediction.py  user_service.py
shared/: crypto_tweets.py  personality.py
shared/data/: pluto_training_dataset_v1.csv  vegas_odds.csv
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20250327005029_change_prediction_tables.sql
utils/: __init__.py  schema_json_parser.py
(+12 files in other folders)
