[project]
name = "pluto-ai"
version = "0.1.0"
description = "NBA Prediction Agent"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pipreqs (>=0.5.0,<0.6.0)",
    "agency @ file:///Users/davontaejackson/dev/pluto-ai/agency",
    "aiohttp (>=3.11.13,<4.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "llama-index-embeddings-huggingface (>=0.5.2,<0.6.0)",
    "llama-index-llms-ollama (>=0.5.2,<0.6.0)",
    "black (>=25.1.0,<26.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "numpy (>=1.22.2,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "nba-api (>=1.7,<2.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
[tool.poetry.dependencies]
agency = {develop = true}
